fix align add gallery

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2180,6 +2180,10 @@ fieldset {
     max-width: 36rem;
   }
 
+  .md\:flex-1 {
+    flex: 1 1 0%;
+  }
+
   .md\:-translate-x-5 {
     --tw-translate-x: -1.25rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
